dataset1235/2025-2/1153765216/users/1752965911/executions/3138746197_291286518.log
== RUN (2025-08-21 18:35:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:37:55)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
# Leitura de valores de entrada e conversao pa
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:35:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:38:32)
-- CODE: 
num = int(input())
numero = num*2 
print(numero)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:35:35)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:38:31)
-- CODE: 
num = int(input())
numero = num*2 
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:37:54)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
# Leitura de valores de entrada e conversao pa
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:35:03)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(numero)
          ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:37:56)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
# Leitura de valores de entrada e conversao pa
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:38:09)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:38:10)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:38:08)
-- CODE: 
num = int(intup())
numero = num*2 
print(numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int(intup())
              ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
